--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.2.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
